// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Group Checkbox DOM Snapshot 1`] = `
<fieldset
  className="slds-form-element"
>
  <legend
    className="slds-form-element__legend slds-form-element__label"
  >
    Scheduled Day(s)
  </legend>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-checkbox--button-group"
    >
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleMon"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleMon"
        >
          <span
            className="slds-checkbox--faux"
          >
            Mon
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleTue"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleTue"
        >
          <span
            className="slds-checkbox--faux"
          >
            Tue
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleWed"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleWed"
        >
          <span
            className="slds-checkbox--faux"
          >
            Wed
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleThu"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleThu"
        >
          <span
            className="slds-checkbox--faux"
          >
            Thu
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleFri"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleFri"
        >
          <span
            className="slds-checkbox--faux"
          >
            Fri
          </span>
        </label>
      </span>
    </div>
  </div>
</fieldset>
`;

exports[`Button Group Checkbox Error DOM Snapshot 1`] = `
<fieldset
  className="slds-form-element slds-has-error"
>
  <legend
    className="slds-form-element__legend slds-form-element__label"
  >
    Scheduled Day(s)
  </legend>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-checkbox--button-group"
    >
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleMon"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleMon"
        >
          <span
            className="slds-checkbox--faux"
          >
            Mon
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleTue"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleTue"
        >
          <span
            className="slds-checkbox--faux"
          >
            Tue
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleWed"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleWed"
        >
          <span
            className="slds-checkbox--faux"
          >
            Wed
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleThu"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleThu"
        >
          <span
            className="slds-checkbox--faux"
          >
            Thu
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox--button"
      >
        <input
          id="ButtonGroupExampleFri"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox--button__label"
          htmlFor="ButtonGroupExampleFri"
        >
          <span
            className="slds-checkbox--faux"
          >
            Fri
          </span>
        </label>
      </span>
    </div>
    <div
      className="slds-form-element__help"
    >
      This field is required
    </div>
  </div>
</fieldset>
`;

exports[`Button Group Checkbox Error HTML Snapshot 1`] = `
"<fieldset class=\\"slds-form-element slds-has-error\\">
  <legend class=\\"slds-form-element__legend slds-form-element__label\\">Scheduled Day(s)</legend>
  <div class=\\"slds-form-element__control\\">
    <div class=\\"slds-checkbox--button-group\\"><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleMon\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleMon\\"><span class=\\"slds-checkbox--faux\\">Mon</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleTue\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleTue\\"><span class=\\"slds-checkbox--faux\\">Tue</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleWed\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleWed\\"><span class=\\"slds-checkbox--faux\\">Wed</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleThu\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleThu\\"><span class=\\"slds-checkbox--faux\\">Thu</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleFri\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleFri\\"><span class=\\"slds-checkbox--faux\\">Fri</span></label>
      </span>
    </div>
    <div class=\\"slds-form-element__help\\">This field is required</div>
  </div>
</fieldset>"
`;

exports[`Button Group Checkbox HTML Snapshot 1`] = `
"<fieldset class=\\"slds-form-element\\">
  <legend class=\\"slds-form-element__legend slds-form-element__label\\">Scheduled Day(s)</legend>
  <div class=\\"slds-form-element__control\\">
    <div class=\\"slds-checkbox--button-group\\"><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleMon\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleMon\\"><span class=\\"slds-checkbox--faux\\">Mon</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleTue\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleTue\\"><span class=\\"slds-checkbox--faux\\">Tue</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleWed\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleWed\\"><span class=\\"slds-checkbox--faux\\">Wed</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleThu\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleThu\\"><span class=\\"slds-checkbox--faux\\">Thu</span></label>
      </span><span class=\\"slds-button slds-checkbox--button\\"><input type=\\"checkbox\\" id=\\"ButtonGroupExampleFri\\"/><label class=\\"slds-checkbox--button__label\\" for=\\"ButtonGroupExampleFri\\"><span class=\\"slds-checkbox--faux\\">Fri</span></label>
      </span>
    </div>
  </div>
</fieldset>"
`;

exports[`Button Group IconGroup DOM Snapshot 1`] = `
<div
  className="slds-button-group"
  role="group"
>
  <button
    aria-live="polite"
    className="slds-button slds-not-selected slds-button--icon-border"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      aria-hidden="true"
      className="slds-button__icon slds-button__icon--stateful"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#chart"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Show Chart
    </span>
  </button>
  <button
    aria-live="polite"
    className="slds-button slds-not-selected slds-button--icon-border"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      aria-hidden="true"
      className="slds-button__icon slds-button__icon--stateful"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#filterList"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Filter List
    </span>
  </button>
  <div
    className="slds-dropdown-trigger slds-dropdown-trigger--click slds-button--last"
    id="icon-dropdown-example"
    onClick={[Function]}
    onFocus={null}
    onKeyDown={[Function]}
    onMouseEnter={null}
    onMouseLeave={null}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="slds-button slds-button--icon-more ignore-click-icon-dropdown-example"
      disabled={false}
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon--x-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Settings
      </span>
    </button>
  </div>
</div>
`;

exports[`Button Group IconGroup HTML Snapshot 1`] = `
"<div class=\\"slds-button-group\\" role=\\"group\\"><button aria-live=\\"polite\\" class=\\"slds-button slds-not-selected slds-button--icon-border\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--stateful\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#chart\\"></use></svg><span class=\\"slds-assistive-text\\">Show Chart</span></button>
  <button
    aria-live=\\"polite\\" class=\\"slds-button slds-not-selected slds-button--icon-border\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--stateful\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#filterList\\"></use></svg><span class=\\"slds-assistive-text\\">Filter List</span></button>
    <div class=\\"slds-dropdown-trigger slds-dropdown-trigger--click slds-button--last\\"
      id=\\"icon-dropdown-example\\"><button aria-expanded=\\"false\\" aria-haspopup=\\"true\\" class=\\"slds-button slds-button--icon-more ignore-click-icon-dropdown-example\\" tabindex=\\"0\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#settings\\"></use></svg><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-button__icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#down\\"></use></svg><span class=\\"slds-assistive-text\\">Settings</span></button></div>
</div>"
`;

exports[`Button Group MoreIcon DOM Snapshot 1`] = `
<div
  className="slds-button-group"
  role="group"
>
  <button
    className="slds-button slds-button--neutral"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Refresh
  </button>
  <button
    className="slds-button slds-button--neutral"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Edit
  </button>
  <button
    className="slds-button slds-button--neutral"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
  <div
    className="slds-dropdown-trigger slds-dropdown-trigger--click slds-button--last"
    id="ButtonGroupExampleDropdown"
    onClick={[Function]}
    onFocus={null}
    onKeyDown={[Function]}
    onMouseEnter={null}
    onMouseLeave={null}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="slds-button slds-button--icon-border-filled ignore-click-ButtonGroupExampleDropdown"
      disabled={false}
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More Options
      </span>
    </button>
  </div>
</div>
`;

exports[`Button Group MoreIcon HTML Snapshot 1`] = `
"<div class=\\"slds-button-group\\" role=\\"group\\"><button class=\\"slds-button slds-button--neutral\\" type=\\"button\\">Refresh</button><button class=\\"slds-button slds-button--neutral\\" type=\\"button\\">Edit</button><button class=\\"slds-button slds-button--neutral\\" type=\\"button\\">Save</button>
  <div class=\\"slds-dropdown-trigger slds-dropdown-trigger--click slds-button--last\\"
    id=\\"ButtonGroupExampleDropdown\\"><button aria-expanded=\\"false\\" aria-haspopup=\\"true\\" class=\\"slds-button slds-button--icon-border-filled ignore-click-ButtonGroupExampleDropdown\\" tabindex=\\"0\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#down\\"></use></svg><span class=\\"slds-assistive-text\\">More Options</span></button></div>
</div>"
`;
